--- a/0x01-react_intro/task_2/dashboard/src/Notifications.css
+++ b/0x01-react_intro/task_2/dashboard/src/Notifications.css
@@ -1,5 +1,20 @@
+/* src/Notifications.css */
+
 .Notifications {
-    border: 1px solid black;
-    padding: 10px;
-  }
-  
+  border: 2px solid #e1354b;
+  padding: 20px;
+  position: relative;
+}
+
+.Notifications ul {
+  list-style: none;
+  padding: 0;
+}
+
+.Notifications li[data-priority="default"] {
+  color: blue;
+}
+
+.Notifications li[data-priority="urgent"] {
+  color: red;
+}
